--- a/style.css
+++ b/style.css
@@ -2,4 +2,9 @@ body {
   font-family: "Quicksand", sans-serif;
   padding: 0;
   margin: 0;
+}
+
+.search-icon {
+  height: 20px;
+  width: 20px;
 }/*# sourceMappingURL=style.css.map */
