--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
 }
 
+nav {
+  background-color: black;
+  color: white;
+  padding: 20px 50px;
+}
+
 .search-icon {
   height: 20px;
   width: 20px;
