flexed the nav, and styled the search bar. learned a nice trick for making search bar nice, as well as using placeholder selectors in scss"

--- a/style.css
+++ b/style.css
@@ -10,6 +10,34 @@ nav {
   padding: 20px 50px;
 }
 
+.nav-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  background-color: grey;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+.search-input {
+  border: none;
+  background-color: transparent;
+}
+.search-input::-moz-placeholder {
+  color: lightgray;
+}
+.search-input:-ms-input-placeholder {
+  color: lightgray;
+}
+.search-input::placeholder {
+  color: lightgray;
+}
+
 .search-icon {
   height: 20px;
   width: 20px;
