--- a/style.scss
+++ b/style.scss
@@ -10,6 +10,28 @@ nav {
     padding: 20px 50px;
 }
 
+.nav-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.search {
+    display: flex;
+    align-items: center;
+    background-color: grey;
+    padding: 10px 20px;
+    border-radius: 10px;
+}
+
+.search-input {
+    border: none;
+    background-color: transparent;
+
+    &::placeholder {
+        color: lightgray;
+    }
+}
 
 .search-icon {
     height: 20px;
