--- a/style.scss
+++ b/style.scss
@@ -37,3 +37,9 @@ nav {
     height: 20px;
     width: 20px;
 }
+
+.limited-offer {
+    font-size: 20px;
+    border-bottom: 2px solid green;
+    cursor: pointer;
+}
