--- a/style.scss
+++ b/style.scss
@@ -44,3 +44,15 @@ nav {
     cursor: pointer;
 }
 
+.nav-bottom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu-item {
+    margin-right: 50px;
+    cursor: pointer;
+    color: lightgray;
+    
+}
