--- a/style.css
+++ b/style.css
@@ -59,4 +59,11 @@ nav {
   margin-right: 50px;
   cursor: pointer;
   color: lightgray;
+}
+
+.slider {
+  background: url(https://source.unsplash.com/NqXqLPhdbvU/800x600);
+  background-size: cover;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 68%);
+          clip-path: polygon(0 0, 100% 0, 100% 100%, 0 68%);
 }/*# sourceMappingURL=style.css.map */
