--- a/style.scss
+++ b/style.scss
@@ -54,5 +54,13 @@ nav {
     margin-right: 50px;
     cursor: pointer;
     color: lightgray;
-    
+
+}
+
+.slider {
+    background: url(https://source.unsplash.com/NqXqLPhdbvU/800x600);
+    background-size: cover;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 68%);
+
+
 }
