added other items to slider in html

--- a/style.scss
+++ b/style.scss
@@ -60,7 +60,9 @@ nav {
 .slider {
     background: url(https://source.unsplash.com/NqXqLPhdbvU/800x600);
     background-size: cover;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 68%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 65%);
+}
 
-
+.slide-wrapper {
+    
 }
