--- a/style.css
+++ b/style.css
@@ -62,8 +62,31 @@ nav {
 }
 
 .slider {
-  background: url(https://source.unsplash.com/NqXqLPhdbvU/800x600);
+  background: url(https://source.unsplash.com/9tqAeLDQT-o/1600x800);
   background-size: cover;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 65%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0 65%);
+}
+
+.slider-wrapper {
+  display: flex;
+  width: 500vw;
+}
+
+.slider-item {
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.slider-title {
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  color: white;
+  font-size: 60px;
+  font-weight: 900;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
