--- a/style.css
+++ b/style.css
@@ -66,12 +66,13 @@ nav {
   background-size: cover;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 65%);
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0 65%);
+  overflow: hidden;
 }
 
 .slider-wrapper {
   display: flex;
   width: 500vw;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 .slider-item {
