--- a/style.scss
+++ b/style.scss
@@ -67,12 +67,13 @@ nav {
     background: url(https://source.unsplash.com/9tqAeLDQT-o/1600x800);
     background-size: cover;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 65%);
+    overflow: hidden;
 }
 
 .slider-wrapper {
     display: flex;
     width: 500vw;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.4s ease-in-out;
 }
 
 .slider-item {
