--- a/style.scss
+++ b/style.scss
@@ -66,7 +66,7 @@ nav {
 .slider {
     background: url(https://source.unsplash.com/9tqAeLDQT-o/1600x800);
     background-size: cover;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 65%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
     overflow: hidden;
 }
 
@@ -183,3 +183,30 @@ nav {
         color: black;
     }
 }
+
+.features {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+}
+
+.feature {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+
+}
+
+.feature-img {
+    width: 50px;
+    height: 50px;
+}
+
+.feature-title {
+    font-size: 20px;
+    font-weight: 600;
+    margin: 20px;
+}
+
