--- a/style.scss
+++ b/style.scss
@@ -216,3 +216,21 @@ nav {
     height: 100px;
 }
 
+.product {
+    height: 100vh;
+    background-color: whitesmoke;
+    clip-path: polygon(0 0, 100% 15%, 100% 100%, 0 100%);
+    position: relative;
+}
+
+.product-img {
+    width: 50%;
+}
+
+.product-details {
+    position: absolute;
+    top: 10%;
+    right: 0;
+    width: 40%;
+    padding: 50px;
+}
