addedds style to the button, including hover effect. learned some about box shadow

--- a/style.css
+++ b/style.css
@@ -244,4 +244,20 @@ nav {
   margin-right: 10px;
   cursor: pointer;
   font-size: 20px;
+}
+
+.product-button {
+  float: right;
+  padding: 10px 20px;
+  border-radius: 3px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  font-weight: 600;
+  border: none;
+}
+.product-button:hover {
+  background-color: white;
+  color: black;
+  box-shadow: 10px 10px 5px #aaaaaa;
 }/*# sourceMappingURL=style.css.map */
