--- a/style.css
+++ b/style.css
@@ -259,5 +259,5 @@ nav {
 .product-button:hover {
   background-color: white;
   color: black;
-  box-shadow: 10px 10px 5px #aaaaaa;
+  box-shadow: 10px 10px 5px rgb(192, 45, 106);
 }/*# sourceMappingURL=style.css.map */
