--- a/style.scss
+++ b/style.scss
@@ -286,7 +286,7 @@ nav {
     &:hover {
         background-color: white;
         color: black;
-        box-shadow: 10px 10px 5px #aaaaaa;
+        box-shadow: 10px 10px 5px $color-1;
 
     }
 }
