added style to payment so that it is statically at the bottom

--- a/style.scss
+++ b/style.scss
@@ -220,6 +220,14 @@ nav {
     height: 100px;
 }
 
+.payment {
+    width: 500px;
+    height: 500px;
+    background-color: white;
+    position: absolute;
+
+}
+
 .product {
     height: 100vh;
     background-color: whitesmoke;
