--- a/style.css
+++ b/style.css
@@ -199,6 +199,15 @@ nav {
   height: 500px;
   background-color: white;
   position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  padding: 10px 50px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 24px 35px 42px -8px rgb(192, 45, 106);
 }
 
 .product {
