--- a/style.scss
+++ b/style.scss
@@ -225,6 +225,17 @@ nav {
     height: 500px;
     background-color: white;
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    padding: 10px 50px;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-shadow: 24px 35px 42px -8px $color-1;
+    -moz-box-shadow: 24px 35px 42px -8px $color-1;
+    box-shadow: 24px 35px 42px -8px $color-1;
 
 }
 
