added style to input fields

--- a/style.scss
+++ b/style.scss
@@ -239,6 +239,21 @@ nav {
 
 }
 
+.pay-title {
+    font-size: 20px;
+    color: darkgray;
+}
+
+label {
+    font-size: 14px;
+    font-weight: 300;
+}
+
+.pay-input {
+    padding: 10px;
+    margin: 10px 0px 10px 10px;
+}
+
 .product {
     height: 100vh;
     background-color: whitesmoke;
