--- a/style.css
+++ b/style.css
@@ -210,6 +210,21 @@ nav {
   box-shadow: 24px 35px 42px -8px rgb(192, 45, 106);
 }
 
+.pay-title {
+  font-size: 20px;
+  color: darkgray;
+}
+
+label {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.pay-input {
+  padding: 10px;
+  margin: 10px 0px 10px 10px;
+}
+
 .product {
   height: 100vh;
   background-color: whitesmoke;
