--- a/style.scss
+++ b/style.scss
@@ -252,6 +252,12 @@ label {
 .pay-input {
     padding: 10px;
     margin: 10px 0px 10px 10px;
+    border: none;
+    border-bottom: 1px solid grey;
+
+    &::placeholder {
+        color: lightgrey;
+    }
 }
 
 .product {
