--- a/style.css
+++ b/style.css
@@ -236,6 +236,11 @@ label {
   color: lightgrey;
 }
 
+.card-icon {
+  height: 40px;
+  width: 40px;
+}
+
 .product {
   height: 100vh;
   background-color: whitesmoke;
