--- a/style.scss
+++ b/style.scss
@@ -260,6 +260,11 @@ label {
     }
 }
 
+.card-icon {
+    height: 40px;
+    width: 40px;
+}
+
 .product {
     height: 100vh;
     background-color: whitesmoke;
