added js to open and close payment screen

--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ nav {
   right: 0;
   margin: auto;
   padding: 10px 50px;
-  display: flex;
+  display: none;
   flex-direction: column;
   box-shadow: 24px 35px 42px -8px rgb(192, 45, 106);
 }
