--- a/style.scss
+++ b/style.scss
@@ -231,7 +231,7 @@ nav {
     right: 0;
     margin: auto;
     padding: 10px 50px;
-    display: flex;
+    display: none;
     flex-direction: column;
     -webkit-box-shadow: 24px 35px 42px -8px $color-1;
     -moz-box-shadow: 24px 35px 42px -8px $color-1;
