--- a/style.css
+++ b/style.css
@@ -352,4 +352,13 @@ label {
   background-color: white;
   color: black;
   box-shadow: 10px 10px 5px rgb(192, 45, 106);
+}
+
+.gallery {
+  padding: 50px;
+  display: flex;
+}
+
+.gallery-item {
+  width: 33%;
 }/*# sourceMappingURL=style.css.map */
