--- a/style.css
+++ b/style.css
@@ -366,4 +366,34 @@ label {
 
 .gallery-img {
   width: 100%;
+}
+
+.new-season {
+  display: flex;
+}
+
+.ns-item {
+  flex: 1;
+  background-color: black;
+  color: beige;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.ns-img {
+  width: 100%;
+  height: 500px;
+}
+
+.ns-title {
+  font-size: 40px;
+}
+
+.ns-button {
+  padding: 15px;
+  font-weight: 600;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
