--- a/style.css
+++ b/style.css
@@ -428,4 +428,18 @@ footer {
 .footer-right {
   flex: 1;
   padding: 50px;
+}
+
+.footer-right-menu {
+  padding: 10px;
+}
+
+.footer-icons {
+  display: flex;
+}
+
+.footer-icon {
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
 }/*# sourceMappingURL=style.css.map */
