--- a/style.scss
+++ b/style.scss
@@ -461,3 +461,17 @@ footer {
     flex: 1;
     padding: 50px;
 }
+
+.footer-right-menu {
+    padding: 10px;
+}
+
+.footer-icons{
+    display: flex;
+}
+
+.footer-icon {
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+}
