--- a/style.scss
+++ b/style.scss
@@ -460,18 +460,33 @@ footer {
 .footer-right {
     flex: 1;
     padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.footer-right-menu {
-    padding: 10px;
+.footer-input {
+    padding: 5px;
 }
 
-.footer-icons{
+.footer-button {
+    padding: 5px;
+    background-color: black;
+    color: beige;
+    cursor: pointer;
+}
+
+.footer-icons {
     display: flex;
 }
 
 .footer-icon {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     margin-right: 10px;
+}
+
+.copyright {
+    font-weight: 300;
+    font-size: 14px;
 }
