--- a/style.scss
+++ b/style.scss
@@ -490,3 +490,22 @@ footer {
     font-weight: 300;
     font-size: 14px;
 }
+
+@media screen and (max-width: 780px) {
+    nav {
+        padding: 20px;
+    }
+
+    .search {
+        display: none;
+    }
+
+    .nav-bottom {
+        flex-wrap: wrap;
+
+    }
+
+    .menu-item {
+        margin-right: 20px;
+    }
+}
