--- a/style.css
+++ b/style.css
@@ -122,7 +122,10 @@ nav {
   height: 750px;
   border-radius: 50%;
   position: absolute;
-  z-index: -1;
+}
+
+.slider-img {
+  z-index: 1;
 }
 
 .slider-title {
@@ -133,6 +136,7 @@ nav {
   font-size: 60px;
   font-weight: 900;
   text-align: center;
+  z-index: 1;
 }
 
 .slider-price {
@@ -144,6 +148,7 @@ nav {
   font-weight: 300;
   text-align: center;
   border: 1px grey solid;
+  z-index: 1;
 }
 
 .buy-button {
@@ -157,6 +162,7 @@ nav {
   border: 1px grey solid;
   cursor: pointer;
   background-color: black;
+  z-index: 1;
 }
 .buy-button:hover {
   background-color: grey;
@@ -471,5 +477,30 @@ footer {
   }
   .menu-item {
     margin-right: 20px;
+  }
+  .slider {
+    -webkit-clip-path: none;
+            clip-path: none;
+  }
+  .slider-img {
+    width: 90%;
+  }
+  .slider-bg {
+    width: 100%;
+    height: 100%;
+  }
+  .slider-title {
+    display: none;
+  }
+  .slider-price {
+    top: unset;
+    left: 0;
+    bottom: 0;
+    background-color: darkgray;
+    margin: 0;
+  }
+  .buy-button {
+    right: 0;
+    top: 0;
   }
 }/*# sourceMappingURL=style.css.map */
