--- a/style.scss
+++ b/style.scss
@@ -592,6 +592,10 @@ footer {
     }
 
     .new-season {
-        display
+        flex-direction: column;
+    }
+
+    .ns-item:nth-child(2) {
+        padding: 40px;
     }
 }
