--- a/style.scss
+++ b/style.scss
@@ -598,4 +598,21 @@ footer {
     .ns-item:nth-child(2) {
         padding: 40px;
     }
+
+    footer {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-left {
+        width: 90%;
+        padding: 20px;
+    }
+
+    .footer-right {
+        padding: 20px;
+        width: 90%;
+        align-items: center;
+        background-color: whitesmoke;
+    }
 }
