--- a/style.scss
+++ b/style.scss
@@ -615,4 +615,9 @@ footer {
         align-items: center;
         background-color: whitesmoke;
     }
+
+    .payment {
+        width: 80%;
+        padding: 20px;
+    }
 }
