--- a/style.css
+++ b/style.css
@@ -558,4 +558,8 @@ footer {
     align-items: center;
     background-color: whitesmoke;
   }
+  .payment {
+    width: 80%;
+    padding: 20px;
+  }
 }/*# sourceMappingURL=style.css.map */
